# QuantTools

./: .gitignore  .pylintrc  BestPractice.md  README.md  ongoing_project.txt  pricingConfig.json  req_long.txt  requirement.txt  requirements.txt  ruff.toml  running_todo.todo  setup.cfg  setup.py  test.yaml  test_atexit.py  test_logger_fix.py  test_negative_cache.py  todo.todo
.cursor/rules/: coding-standards.mdc
.decommissioned/: WFA.py  WalkForwardUtils.py  strats.py
.decommissioned/algo/: algo.strategies._utils.py  algo.strategies.init_orders.py  (+1 more)
.github/: copilot-instructions.md  prompt-library.md
EventDriven/: .live_forward_compatibility.txt  RiskManager.ipynb  __init__.py  _vars.py  about EventDriven (DO NOT EDIT).xlsx  attribution.py  attributor.py  backtest.py  bactest_data.txt  data.py  dataHandler.ipynb  demo.ipynb  demoRun.py  demo_chidi_mino.ipynb  event.py  eventScheduler.py  exceptions.py  execution.py  helpers.py  liquidity.py  logging.py  new_portfolio.py  performance.py  pnl_analysis.md  portfolio.py  portfolio_utils.py  profitable_trades.csv  profitable_weights.json  requirements.txt  riskmanager.py  riskmanager_async.py  riskmanager_decomm.py  riskmanager_threading.py  strategy.py  test.py  trade.py  tradeLedger.py  types.py
EventDrivenBacktest/: README.md  backtest.py  data.py  event.py  execution.py  performance.py  portfolio.py  test.ipynb
module_test/: rates.ipynb  test_no_slippage.py  test_position_cache.py  test_trade_pnl_consistency.py  test_xmultiply_dual_mode.py
trade/: __init__.py  _multiprocessing.py  known_issues.txt  setup.py
(+468 files in other folders)
