ini

[metadata]
name = QuantTools
version = 0.1.0
description = A Python package for quantitative trading tools and strategies.
long_description = file: README.md
author = Chidi & Zino
license = MIT

[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    scikit-learn
    statsmodels
    yfinance
    ta-lib
python_requires = >=3.7